# generate_dummy_data

./: .gitignore  AGENTS.md  README.md  generate_csv.py  input_format.xlsx  pyproject.toml
csv_generator/: __init__.py  cli.py  config.py  diff_type.py  format_spec.py  generators.py  io.py  progress.py  size_control.py  values.py
docs/: PLAN.md  SPEC.md  format.md  requirements.md
docs/format/: bfs_entry_informations.md  bfs_service_summary_accessories.md  bfs_service_summary_device.md  compass_sales_approval.md  dwh_unified_company_information.md  m_agency.md  m_campaign.md  m_product.md
docs/superpowers/plans/: 2026-04-21-csv-header-label.md
docs/superpowers/specs/: 2026-04-21-csv-header-label-design.md  2026-04-21-full-output-size-design.md
sample_data/: bfs_entry_informations.csv  bfs_service_summary_accessories.csv  bfs_service_summary_devices.csv  compass_sales_approval.csv  corp_customer_info.csv
tests/: test_generate_csv.py
